<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/parent_container"
    tools:context=".RegisterActivity">

    <include layout="@layout/loading" android:id="@+id/loading_overlay"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    <ImageView
        android:id="@+id/poster_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/poster_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textColorHint="@color/grey"
            android:background="@drawable/input_style"
            />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:padding="10dp"
            android:background="@drawable/input_style"
            />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:padding="10dp"
            android:background="@drawable/input_style"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:padding="10dp"
            android:background="@drawable/input_style"
            />

        <TextView
            android:id="@+id/input_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            />


        <android.widget.Button
            android:id="@+id/input_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_register_and_login"
            />

    </LinearLayout>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account"
            app:layout_constraintTop_toBottomOf="@id/layout_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/grey"
            android:layout_marginTop="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/dialog_error_network" android:id="@+id/dialog_error"/>

</androidx.constraintlayout.widget.ConstraintLayout>
