<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/parent_container"
    tools:context=".LoginActivity">

    <include layout="@layout/loading" android:id="@+id/loading_overlay"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/poster_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/poster_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:background="@drawable/input_style"
                android:padding="10dp"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:background="@drawable/input_style"
                android:textColorHint="@color/grey"
                android:padding="10dp"
                />

            <TextView
                android:id="@+id/input_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                />
            <android.widget.Button
                android:id="@+id/input_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_register_and_login"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            app:layout_constraintTop_toBottomOf="@id/layout_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/grey"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            app:layout_constraintTop_toBottomOf="@id/create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/grey"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/dialog_error_network" android:id="@+id/dialog_error"/>
    <include layout="@layout/dialog_error_blocked" android:id="@+id/dialog_blocked"/>

</androidx.constraintlayout.widget.ConstraintLayout>
