<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity"
    android:background="@color/white"
    >

    <include layout="@layout/top_navigation_bar" android:id="@+id/top_navigation_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="30dp"
                android:background="@color/leaf">
                <androidx.cardview.widget.CardView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/user_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingVertical="30dp"
                    android:paddingHorizontal="20dp"
                    android:elevation="2dp"
                    app:cardCornerRadius="100dp"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/blank_profile"
                        android:scaleType="centerInside" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/user_profile"
                    app:layout_constraintBottom_toTopOf="@+id/detail">
                </TextView>
                <TextView
                    android:id="@+id/detail"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/hello_iam_a_customer_of_sembadajati_shop"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    app:layout_constraintLeft_toRightOf="@+id/user_profile">
                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/user">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ganti_data"
                    android:textColor="@color/leaf"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintLeft_toLeftOf="parent">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                </LinearLayout>

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Example: Osas"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="@color/grey"/>

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="Example: osas@gmail.com"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="@color/grey"/>

                <EditText
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text|phone"
                    android:hint="Example: 081987654098"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="@color/grey"/>

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/previous_password"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="@color/grey"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_rounded_corner"
                    app:backgroundTint="@color/leaf"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp" />
                <Button
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_rounded_corner"
                    app:backgroundTint="#DD3A3A"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/navigation_bar" android:id="@+id/navigation_bar"/>
</androidx.constraintlayout.widget.ConstraintLayout>